2023_frameworks/go_websocket/deployments/k8s/k8s_nodeport.yaml
apiVersion: v1
kind: Service

metadata:
  name: hello02-nodeport

spec:
  type: NodePort

  selector:
    app: hello02

  ports:
  # nodePort port range: 30000-32767
  # port: communcation between nodes, targetPort: pod port, nodePort: service node port
  - { protocol: TCP, port: 7030, targetPort: 8080, nodePort: 30010 }


# curl w01:30010/api/open/ping
# curl w02:30010/api/open/ping
