2023_frameworks/go_websocket/deployments/k8s/k8s_service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hello02-clusterip

spec:
  type: ClusterIP

  selector:
    app: hello02

  ports:
  - { protocol: TCP, port: 1010, targetPort: 8080 }
  # cluster port: 1010, pod port: 8080

#### inspect commands
# kubectl get ep hello02-clusterip
# kubectl describe ep hello02-clusterip
# kubectl get service hello02-clusterip -o wide
# kubectl describe service hello02-clusterip

# addr=$(kubectl get service hello02-clusterip | awk 'NR==2{split($5, a, "/"); print $3":"a[1]}')
# docker exec cluster02-worker curl $addr/api/open/ping
